# emberflix

./: Cargo.toml  copilot_qa.md
migration/src/: lib.rs  m20240613_000001_create_user.rs  m20240613_120211_create_media.rs  m20240613_121616_create_comment.rs  m20240613_121616_create_comment_on_media.rs  m20240613_125108_create_comment_on_comment.rs  m20240613_132154_create_tag.rs  m20240613_132238_create_like.rs  m20240613_132253_create_favorite.rs  m20240613_132253_create_subscribe.rs  m20240613_132301_create_follow.rs  m20240613_132301_create_subscribe.rs  m20240616_114002_create_media_tag.rs
src/: lib.rs  main.rs
src/app/: mod.rs
src/colors/: mod.rs
src/entities/: comment.rs  comment_on_comment.rs  comment_on_media.rs  favorite.rs  follow.rs  like.rs  media.rs  media_tag.rs  mod.rs  prelude.rs  subscribe.rs  tag.rs  user.rs
src/logic/: create.rs  delete.rs  read.rs  update.rs
src/router/: create.rs  delete.rs  mod.rs
src/sub_entities/: mod.rs
src/tabs/: mod.rs
src/term/: mod.rs
