[package]
name = "emberflix"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
] }
dotenvy = "0.15"
chrono = "*"
migration = { path = "./migration" }
tokio = { version = "1.38", features = ["full"] }
once_cell = "1.19.0"
# rocket = { version = "^0.5.0-rc.2", features = ["json"] }
# actix-web = "4"
# slint = "1.6"
crossterm = "0.27.0"
ratatui = { version = "0.26.3", features = ["widget-calendar", "serde"] }
